--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a id="who-runs-ram-hacks" class="anchor" href="#who-runs-ram-hacks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who runs RAM Hacks?</h3>
 
-<p>Our current president is Antoinette Bongiorno. She is supported by Vice President and Secretary Christopher Glasz and treasurer Daniel Dides. We also have the backing and continued support of many professors and graduate students in the department. Input from the members is always welcome, though! Feel free to contact the administration at <a href="mailto:admin@ram-hacks.org">admin@ram-hacks.org</a>.</p>
+<p>Our current president is Antoinette Bongiorno. She is supported by Vice President Christopher Glasz, Treasurer Daniel Dides, and Secretary James Clinton. We also have the backing and continued support of many professors and graduate students in the department. Input from the members is always welcome, though! Feel free to contact the administration at <a href="mailto:admin@ram-hacks.org">admin@ram-hacks.org</a>.</p>
 
 <h3>
 <a id="what-will-ram-hacks-achieve-this-semester" class="anchor" href="#what-will-ram-hacks-achieve-this-semester" aria-hidden="true"><span class="octicon octicon-link"></span></a>What will RAM Hacks achieve this semester?</h3>
