--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h3>
 <a id="when-does-ram-hacks-meet" class="anchor" href="#when-does-ram-hacks-meet" aria-hidden="true"><span class="octicon octicon-link"></span></a>When does RAM Hacks meet?</h3>
 
-<p>We meet Tuesdays at 5:00PM in the Tyler graduate lounge (room 126). Just follow the smell of pizza!</p>
+<p>We meet Tuesdays at 5:00PM in the Tyler Hall graduate lounge (room 126). Just follow the smell of pizza!</p>
 
 <h3>
 <a id="who-runs-ram-hacks" class="anchor" href="#who-runs-ram-hacks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who runs RAM Hacks?</h3>
