Updated Index with links and added header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+	<div id="navigation">
+		<a href="index.html">About</a> | 
+		<a href="https://github.com/ram-hacks/Weekly-Programming-Challenge">Weekly Programming Challenge</a> | 
+	</div>
     <section class="page-header">
       <h1 class="project-name">RAM Hacks</h1>
       <h2 class="project-tagline">URI&#39;s Official Computer Interest Group</h2>
