I left a pipe. I'm bad and I feel bad

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 	<div id="navigation">
 		<a href="index.html">About</a> | 
-		<a href="https://github.com/ram-hacks/Weekly-Programming-Challenge">Weekly Programming Challenge</a> | 
+		<a href="https://github.com/ram-hacks/Weekly-Programming-Challenge">Weekly Programming Challenge</a>
 	</div>
     <section class="page-header">
       <h1 class="project-name">RAM Hacks</h1>
